[gd_scene load_steps=27 format=3 uid="uid://diiom6d5in6qa"]

[ext_resource type="Script" path="res://src/ui/UI.gd" id="1_r6tyj"]
[ext_resource type="Script" path="res://src/gameplay/Gameplay.gd" id="2_0c4th"]
[ext_resource type="Script" path="res://src/debug/Debug.gd" id="2_x4xsm"]
[ext_resource type="Script" path="res://src/gameplay/train/Train.gd" id="3_fdwhw"]
[ext_resource type="Texture2D" uid="uid://ctknoqft0tyk8" path="res://src/utils/assets/100x100_size.png" id="3_gwip8"]
[ext_resource type="Texture2D" uid="uid://cm6oidcsctgep" path="res://src/utils/assets/all_sizes.png" id="3_rpb1h"]
[ext_resource type="PackedScene" uid="uid://uibaq1sunysu" path="res://src/gameplay/units/health/health_scene.tscn" id="4_0clq0"]
[ext_resource type="Script" path="res://src/debug/debug_states/DebugStateManager.gd" id="4_nwoxa"]
[ext_resource type="Script" path="res://src/debug/debug_states/DebugIdleState.gd" id="5_a5cc2"]
[ext_resource type="Script" path="res://src/debug/debug_states/DebugNotIdleAnymoreState.gd" id="6_3ocii"]
[ext_resource type="Script" path="res://src/gameplay/train/LifeBarTrainManager.gd" id="6_jjrh3"]
[ext_resource type="Script" path="res://src/gameplay/units/player/Player.gd" id="7_b50cc"]
[ext_resource type="Script" path="res://src/gameplay/interactables/dummy/InteractableDummy.gd" id="7_m1u7u"]
[ext_resource type="Script" path="res://src/gameplay/interactables/Interactable.gd" id="9_25mrw"]
[ext_resource type="Script" path="res://src/gameplay/units/attack/Attack.gd" id="10_snsl8"]
[ext_resource type="Script" path="res://src/gameplay/units/movement/Movement.gd" id="11_lyo0j"]
[ext_resource type="Script" path="res://src/gameplay/units/enemies/dummy/Dummy.gd" id="12_a6pa8"]
[ext_resource type="Script" path="res://src/gameplay/units/player/lifebar/LifeBarManager.gd" id="14_snfxw"]
[ext_resource type="Script" path="res://src/gameplay/units/player/interaction/Interaction.gd" id="17_ak5jf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjj6j"]
size = Vector2(97, 97)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8fxd2"]
radius = 28.0
height = 94.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su5tm"]
size = Vector2(451, 89)

[sub_resource type="CircleShape2D" id="CircleShape2D_pvkgu"]
radius = 39.2938

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgvi1"]
size = Vector2(178, 104)

[sub_resource type="SpriteFrames" id="SpriteFrames_m2acc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gwip8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d1sua"]
radius = 27.0
height = 94.0

[node name="train_scene" type="Node"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6tyj")

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="LifeBar" type="ProgressBar" parent="UI/Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
step = 1.0
show_percentage = false

[node name="Menu" type="Button" parent="UI/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Debug - Menu"

[node name="Gameplay" type="Node" parent="."]
script = ExtResource("2_0c4th")

[node name="Environment" type="Node" parent="."]

[node name="Train" type="Node2D" parent="Environment"]
position = Vector2(1117, 461)
script = ExtResource("3_fdwhw")

[node name="Sprite2D" type="Sprite2D" parent="Environment/Train"]
scale = Vector2(0.372917, 0.144444)
texture = ExtResource("3_rpb1h")

[node name="Health" parent="Environment/Train" instance=ExtResource("4_0clq0")]

[node name="LifeBarTrainManager" type="Node" parent="Environment/Train"]
script = ExtResource("6_jjrh3")

[node name="FuelBar" type="ProgressBar" parent="Environment/Train"]
custom_minimum_size = Vector2(200, 25)
offset_left = -197.0
offset_top = -363.0
offset_right = 3.0
offset_bottom = -338.0
step = 1.0
show_percentage = false

[node name="LifeBarTrain" type="ProgressBar" parent="Environment/Train"]
custom_minimum_size = Vector2(200, 25)
offset_left = -197.0
offset_top = -403.0
offset_right = 3.0
offset_bottom = -378.0
step = 1.0
show_percentage = false

[node name="FuelTimer" type="Timer" parent="Environment/Train"]

[node name="InteractableDummy" type="Node2D" parent="Environment"]
position = Vector2(413, 386)
script = ExtResource("7_m1u7u")

[node name="Sprite2D" type="Sprite2D" parent="Environment/InteractableDummy"]
self_modulate = Color(3.94672e-06, 0.426804, 0.00505585, 1)
texture = ExtResource("3_gwip8")

[node name="Interactable" type="Node2D" parent="Environment/InteractableDummy" groups=["interactable"]]
script = ExtResource("9_25mrw")

[node name="Icon" type="Sprite2D" parent="Environment/InteractableDummy/Interactable"]
visible = false
position = Vector2(-4, -64)
scale = Vector2(0.201418, 0.201418)
texture = ExtResource("3_gwip8")

[node name="Area2D" type="Area2D" parent="Environment/InteractableDummy/Interactable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/InteractableDummy/Interactable/Area2D"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_kjj6j")

[node name="Enemies" type="Node" parent="."]

[node name="EnemyDummy" type="CharacterBody2D" parent="Enemies" groups=["enemy"]]
position = Vector2(956, 310)
script = ExtResource("12_a6pa8")

[node name="Sprite2D" type="Sprite2D" parent="Enemies/EnemyDummy"]
modulate = Color(1, 0.388235, 0.313726, 1)
texture = ExtResource("3_gwip8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/EnemyDummy"]
shape = SubResource("CapsuleShape2D_8fxd2")

[node name="Health" parent="Enemies/EnemyDummy" instance=ExtResource("4_0clq0")]

[node name="Debug" type="Node2D" parent="."]
position = Vector2(101, 168)
script = ExtResource("2_x4xsm")

[node name="DebugFSM" type="StaticBody2D" parent="Debug"]
position = Vector2(570, 320)

[node name="Sprite2D" type="Sprite2D" parent="Debug/DebugFSM"]
scale = Vector2(4.6, 1)
texture = ExtResource("3_gwip8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Debug/DebugFSM"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_su5tm")

[node name="StateManager" type="Node" parent="Debug" node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_nwoxa")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Debug/StateManager"]
script = ExtResource("5_a5cc2")

[node name="NotIdleAnymore" type="Node" parent="Debug/StateManager"]
script = ExtResource("6_3ocii")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(642, 310)
script = ExtResource("7_b50cc")

[node name="LifeBar" type="Node" parent="Player"]
script = ExtResource("14_snfxw")

[node name="Attack" type="Node2D" parent="Player"]
script = ExtResource("10_snsl8")

[node name="Timer" type="Timer" parent="Player/Attack"]

[node name="Area2D" type="Area2D" parent="Player/Attack"]
position = Vector2(82, 0)

[node name="Sprite2D" type="Sprite2D" parent="Player/Attack/Area2D"]
modulate = Color(0.929412, 0.254902, 0.533333, 1)
scale = Vector2(0.639995, 0.639995)
texture = ExtResource("3_gwip8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Attack/Area2D"]
shape = SubResource("CircleShape2D_pvkgu")
debug_color = Color(0.839216, 0.0666667, 0.101961, 0.419608)

[node name="Movement" type="Node2D" parent="Player"]
script = ExtResource("11_lyo0j")

[node name="Health" parent="Player" instance=ExtResource("4_0clq0")]

[node name="Interaction" type="Node2D" parent="Player"]
script = ExtResource("17_ak5jf")

[node name="Area2D" type="Area2D" parent="Player/Interaction"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Interaction/Area2D"]
shape = SubResource("RectangleShape2D_xgvi1")
debug_color = Color(0.690196, 0.407843, 0.74902, 0.32549)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
modulate = Color(0.384314, 0.529412, 0.878431, 1)
sprite_frames = SubResource("SpriteFrames_m2acc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_d1sua")

[node name="Camera2D" type="Camera2D" parent="Player"]

[connection signal="pressed" from="UI/Control/MarginContainer/VBoxContainer/Menu" to="UI/Control" method="_on_menu_pressed"]
[connection signal="stopped" from="Environment/Train" to="Gameplay" method="_on_train_stopped"]
[connection signal="timeout" from="Environment/Train/FuelTimer" to="Environment/Train" method="_on_fuel_timer_timeout"]
[connection signal="player_interacted" from="Environment/InteractableDummy/Interactable" to="Environment/InteractableDummy" method="_on_interactable_player_interacted"]
[connection signal="timeout" from="Player/Attack/Timer" to="Player/Attack" method="_on_timer_timeout"]
[connection signal="health_update" from="Player/Health" to="Player/LifeBar" method="_on_health_health_update"]
[connection signal="area_entered" from="Player/Interaction/Area2D" to="Player/Interaction" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Player/Interaction/Area2D" to="Player/Interaction" method="_on_area_2d_area_exited"]
